--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,7 @@
-include: package:very_good_analysis/analysis_options.2.4.0.yaml
+include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     public_member_api_docs: false
+    prefer_const_constructors : false
+    prefer_const_literals_to_create_immutables : false
+    require_trailing_commas : false
