--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,10 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.12
   get_it: ^7.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.5
   intl: ^0.17.0
-  mockito: ^5.3.2
   shared_preferences: ^2.0.15
 
 dev_dependencies:
@@ -28,7 +29,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mocktail: ^0.2.0
-  very_good_analysis: ^2.4.0
+  hive_generator: ^1.1.3
+  build_runner: ^2.3.0
 
 flutter:
   uses-material-design: true
