--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,20 +17,22 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.2.12
+  flutter_spinkit: ^5.1.0
   get_it: ^7.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   http: ^0.13.5
+  internet_connection_checker: ^1.0.0+1
   intl: ^0.17.0
   shared_preferences: ^2.0.15
 
 dev_dependencies:
   bloc_test: ^9.0.2
+  build_runner: ^2.3.0
   flutter_test:
     sdk: flutter
-  mocktail: ^0.2.0
   hive_generator: ^1.1.3
-  build_runner: ^2.3.0
+  mocktail: ^0.2.0
 
 flutter:
   uses-material-design: true
