--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   intl: ^0.17.0
   shared_preferences: ^2.0.15
+  shimmer: ^2.0.0
+  timeago: ^3.3.0
 
 dev_dependencies:
   bloc_test: ^9.0.2
