--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
     sdk: flutter
   hive_generator: ^1.1.3
   mocktail: ^0.2.0
+  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
