--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  appcheck: ^1.0.6
   bloc: ^8.0.2
   connectivity_plus: ^3.0.2
   dartz: ^0.10.1
@@ -31,11 +32,11 @@ dependencies:
 dev_dependencies:
   bloc_test: ^9.0.2
   build_runner: ^2.3.0
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.3
   mocktail: ^0.2.0
-  flutter_lints: ^2.0.1
 
 flutter:
   uses-material-design: true
