--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_native_splash: ^2.2.12
   flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.1.1
   get_it: ^7.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
